# 2d_game_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: Main.cpp  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.cpp  EventBus.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h  logger.cpp  logger.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraMovementSystem.cpp  CameraMovementSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.cpp  MovementSystem.h  MovementSystems.h  ProjectileEmitSystem.cpp  ProjectileEmitSystem.h  RenderCollisionSystem.cpp  RenderCollisionSystem.h  RenderSystem.cpp  RenderSystem.h
src/headers/: Game.h  Logger.h
src/implementation/: Game.cpp  Logger.cpp
